# RL_Gait_Generation

./: .~Gait_Winter.xlsx  Gait_Winter.csv  Gait_Winter.xlsx  aa.py  actions.csv  centaur_human.xml  data_pre.py  example.py  mjkey.txt  policy_test.py  pp.md  trainBash  trainCentaur.py  工作日志.md
ChkGymEnv/: env_bases.py  gym_locomotion_envs.py  robot_bases.py  robot_locomotors.py  scene_abstract.py  setup.py
Pendulum/: environment.py  main.py  q_learning.py
data/: ball_bipedal.rar  centaur_urdf.urdf
data/centaur_four/: CMakeLists.txt  package.xml
data/centaur_four/config/: joint_names_四足带坐标系结构图.yaml
data/centaur_four/launch/: display.launch  gazebo.launch
data/centaur_four/meshes/: blcalf.STL  blfoot.STL  brfoot.STL  frfoot.STL  frthigh.STL
data/centaur_four/urdf/: blthigh.STL  brcalf.STL  brthigh.STL  centaur_four.csv  centaur_four.urdf  centaur_four.xml  flcalf.STL  flfoot.STL  flthigh.STL  frcalf.STL
myGymEnv/: README.md  setup.py
policy_test/: events.out.tfevents.1608243832.chk-Ubuntu.805066.0  events.out.tfevents.1608243832.chk-Ubuntu.805066.1  events.out.tfevents.1608243832.chk-Ubuntu.805071.1  events.out.tfevents.1608243832.chk-Ubuntu.805072.1  events.out.tfevents.1608243832.chk-Ubuntu.805073.1  events.out.tfevents.1608243832.chk-Ubuntu.805074.1  events.out.tfevents.1608243832.chk-Ubuntu.805075.1  events.out.tfevents.1608243832.chk-Ubuntu.805076.1  events.out.tfevents.1608243832.chk-Ubuntu.805077.1  events.out.tfevents.1608243832.chk-Ubuntu.805078.1  events.out.tfevents.1608243836.chk-Ubuntu.805066.2  (+71 more)
pybullet/: chkDogTest.py  chkDogTrain.py  (+5 more)
(+1257 files in other folders)
